fix: resolve horizontal scroll in layout

--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 html, body {
-  margin: 0px;
+  margin: 0;
   background-color: #2F4F30;
   color: white;
+  overflow-x: hidden;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+body {
+  width: 100%;
+  height: auto;
 }
 
 
@@ -22,4 +31,27 @@ html, body {
 
 #computadora-cartas, #jugador-cartas {
   height: 240px;
+}
+#divBotones {
+  margin-block: 1rem;
+}
+.container {
+  text-align: center;
+}
+#app {
+  display: flex;
+  align-items: center;
+  margin: 2rem auto;
+  padding-inline: 3rem;
+  width: 100%;
+}
+@media (max-width: 425px) {
+  #app {
+    flex-direction: column;
+    padding-inline: 1rem;
+  }
+
+  .carta {
+    left: 75px;
+  }
 }
